--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,873 @@
 @charset "UTF-8";
 
-.wrapper {
-  width: 100%;
+@media screen and (min-width: 1200px) { 
+  .contact-button {
+    position: fixed;
+  }
+  .hamburger-box {
+    display: none;
+  }
+
+  .wrapper {
+    width: 100%;
+    margin: 0 auto;
+  }
+  
+  .header {
+    width: 100%;
+  }
+  
+  .header-inner {
+    position: relative;
+    height: 54px;
+    width: 1100px;
+    background-color: #fff;
+  }
+  
+  .fa-bolt {
+    position: absolute;
+    left: 10%;
+    padding: 15px 0;
+    font-size: 1.5em;
+  }
+  
+  .contact-button {
+    text-decoration: none;
+    color: #fff;
+    background-color: #74cfae;
+    font-size: 12px;
+    padding: 14px 12px;
+    position: absolute;
+    right: 10%;
+    margin-top: 7px;
+  }
+  
+  .contact-button:hover {
+    color: #333;
+    transition: all 0.3s;
+  }
+  
+  .theme {
+    background-color: #f2f2f2;
+    width: 100%;
+  }
+
+  .theme-inner {
+    position: relative;
+    height: 640px;
+    background-color: #f2f2f2;
+    width: 1100px;
+  }
+  
+  .main-theme {
+    color: #74cfae;
+    font-size: 90px;
+    font-weight: 700;
+    position: absolute;
+    top: 250px;
+    left: 300px;
+  }
+  
+  .main-theme-p {
+    font-size: 30px;
+    color: #c0c0c0;
+    position: absolute;
+    top: 360px;
+    left: 360px;
+  }
+  
+  .section-container {
+    position: relative;
+  }
+  
+  .section-inner {
+    height: 350px;
+    background-color: #74cfae;
+  }
+  
+  .section-image {
+    position: absolute;
+    top: 50px;
+    left: 170px;
+    display: table-cell;
+    width: 160px;
+    height: 300px;
+  }
+  
+  .section-inner__title {
+    font-size: 24px;
+    color: #fff;
+    position: absolute;
+    top: 70px;
+    right: 470px;
+    font-family: Raleway;
+  }
+  
+  .section-inner__text {
+    font-size: 20px;
+    color: #fff;
+    position: absolute;
+    top: 95px;
+    right: 150px;
+    margin-top: 35px;
+    padding-left: 500px;
+    padding-bottom: 130px;
+    line-height: 22px;
+    text-align: center;
+  }
+  
+  .article-title {
+    font-family: Raleway;
+    text-align: center;
+    font-size: 24px;
+    color: #333;
+    margin-top: 60px;
+    margin-bottom: 40px;
+  }
+  
+  .article-images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 1100px;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+  
+  .article-image-container {
+    box-sizing: border-box;
+    margin: 0 100px 80px 0;
+    width: calc(33.3333333% - 200px / 3);
+    
+  }
+  .article-image {
+    opacity: 0.7;
+  }
+  
+  .article-image:hover {
+    transition: all 0.3s;
+    opacity: 1;
+  }
+  
+  .article-image-container:nth-child(3n) {
+    margin-right: 0;
+  }
+  
+  .article-container-bottom {
+    position: relative;
+  }
+  
+  .email-me__button {
+    text-decoration: none;
+    color: #fff;
+    background-color: #74cfae;
+    font-size: 12px;
+    padding: 14px 20px;
+    display: inline-block;
+    position: absolute;
+    top: 7px;
+  }
+  
+  .email-me__button:hover {
+    color: #333;
+    transition: all 0.3s;
+  }
+  
+  .article-container__text {
+    display: inline-block;
+    width: 530px;
+    margin: 10px 90px 70px 300px;
+    text-align: center;
+  }
+  
+  .section-bottom {
+    background-color: #333;
+    height: 490px
+  }
+  
+  .section-bottom-title {
+    font-family: Raleway;
+    padding-top: 70px;
+    margin-bottom: 70px;
+    font-size: 24px;
+    color: #fff;
+    text-align: center;
+  }
+  
+  .section-bottom-image {
+    float: left;
+    margin-bottom: 100px;
+  }
+  
+  .section-bottom-image__text {
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .section-bottom-image {
+    margin-right: 180px;
+  }
+  
+  .section-bottom-image:first-child {
+    margin-left: 200px;
+  }
+  
+  .fa-facebook-f {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .fa-basketball-ball {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .fa-twitter {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .fa-envelope {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .btn {
+    width: 185px;
+    height: 100px;
+  }
+  
+  .btn:hover {
+    background-color:#fff;
+    transition: all 0.3s;
+  }
+  
+  .sns-wrapper {
+    height: 500px;
+    background-color: #f2f2f2;
+    text-align: center;
+  }
+  
+  .sns-content {
+    padding: 200px 0;
+  }
+  
+  .footer-inner {
+    background-color: #74cfae;
+    height: 65px;
+    position: relative;
+  }
+  
+  .footer__text {
+    color: #fff;
+    position: absolute;
+    top: 20px;
+    right: 200px;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width:1199px) and (min-width:768px) {
+  .contact-button {
+    position: fixed;
+  }
+  
+  .hamburger-box {
+    display: none;
+  }
+
+  .wrapper {
+    width: 1100px;
+    margin: 0 auto;
+  }
+  
+  .header {
+    width: 97%;
+  }
+
+  .inner {
+    width: 97%;
+  }
+  
+  .header-inner {
+    position: relative;
+    height: 54px;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+  }
+  
+  .fa-bolt {
+    position: absolute;
+    left: 20%;
+    padding: 15px 0;
+    font-size: 1.5em;
+  }
+  
+  .contact-button {
+    text-decoration: none;
+    color: #fff;
+    background-color: #74cfae;
+    font-size: 12px;
+    padding: 14px 12px;
+    position: absolute;
+    right: 20%;
+    margin-top: 7px;
+  }
+  
+  .contact-button:hover {
+    color: #333;
+    transition: all 0.3s;
+  }
+  
+  .theme {
+    background-color: #f2f2f2;
+  }
+  
+  .main-theme {
+    color: #74cfae;
+    font-size: 90px;
+    font-weight: 700;
+    position: absolute;
+    top: 250px;
+    left: 450px;
+  }
+  
+  .main-theme-p {
+    font-size: 30px;
+    color: #c0c0c0;
+    position: absolute;
+    top: 360px;
+    left: 500px;
+  }
+  
+  .theme-inner {
+    position: relative;
+    height: 640px;
+    background-color: #f2f2f2;
+    width: 1100px;
+  }
+  
+  .section-container {
+    position: relative;
+  }
+  
+  .section-inner {
+    height: 350px;
+    background-color: #74cfae;
+  }
+  
+  .section-image {
+    position: absolute;
+    top: 50px;
+    left: 170px;
+    display: table-cell;
+    width: 160px;
+    height: 300px;
+  }
+  
+  .section-inner__title {
+    font-size: 24px;
+    color: #fff;
+    position: absolute;
+    top: 70px;
+    right: 470px;
+    font-family: Raleway;
+  }
+  
+  .section-inner__text {
+    font-size: 20px;
+    color: #fff;
+    position: absolute;
+    top: 95px;
+    right: 150px;
+    margin-top: 35px;
+    padding-left: 500px;
+    padding-bottom: 130px;
+    line-height: 22px;
+    text-align: center;
+  }
+  
+  .article-title {
+    font-family: Raleway;
+    text-align: center;
+    font-size: 24px;
+    color: #333;
+    margin-top: 60px;
+    margin-bottom: 40px;
+  }
+  
+  .article-images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 1100px;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+  
+  .article-image-container {
+    box-sizing: border-box;
+    margin: 0 100px 80px 0;
+    width: calc(33.3333333% - 200px / 3);
+    
+  }
+  .article-image {
+    opacity: 0.7;
+  }
+  
+  .article-image:hover {
+    transition: all 0.3s;
+    opacity: 1;
+  }
+  
+  .article-image-container:nth-child(3n) {
+    margin-right: 0;
+  }
+  
+  .article-container-bottom {
+    position: relative;
+  }
+  
+  .email-me__button {
+    text-decoration: none;
+    color: #fff;
+    background-color: #74cfae;
+    font-size: 12px;
+    padding: 14px 20px;
+    display: inline-block;
+    position: absolute;
+    top: 7px;
+  }
+  
+  .email-me__button:hover {
+    color: #333;
+    transition: all 0.3s;
+  }
+  
+  .article-container__text {
+    display: inline-block;
+    width: 530px;
+    margin: 10px 90px 70px 300px;
+    text-align: center;
+  }
+  
+  .section-bottom {
+    background-color: #333;
+    height: 490px
+  }
+  
+  .section-bottom-title {
+    font-family: Raleway;
+    padding-top: 70px;
+    margin-bottom: 70px;
+    font-size: 24px;
+    color: #fff;
+    text-align: center;
+  }
+  
+  .section-bottom-image {
+    float: left;
+    margin-bottom: 100px;
+  }
+  
+  .section-bottom-image__text {
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .section-bottom-image {
+    margin-right: 180px;
+  }
+  
+  .section-bottom-image:first-child {
+    margin-left: 200px;
+  }
+  
+  .fa-facebook-f {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .fa-basketball-ball {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .fa-twitter {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .fa-envelope {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .btn {
+    width: 185px;
+    height: 100px;
+  }
+  
+  .btn:hover {
+    background-color:#fff;
+    transition: all 0.3s;
+  }
+  
+  .sns-wrapper {
+    height: 500px;
+    background-color: #f2f2f2;
+    text-align: center;
+  }
+  
+  .sns-content {
+    padding: 200px 0;
+  }
+  
+  .footer-inner {
+    background-color: #74cfae;
+    height: 65px;
+    position: relative;
+  }
+  
+  .footer__text {
+    color: #fff;
+    position: absolute;
+    top: 20px;
+    right: 200px;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width:767px) {
+  .wrapper {
+    width: 97%;
+    margin: 0 auto;
+  }
+  
+  .header {
+    width: 97%;
+  }
+  
+  .header-inner {
+    position: relative;
+    height: 54px;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+  }
+  
+  .fa-bolt {
+    position: absolute;
+    left: 5%;
+    padding: 15px 0;
+    font-size: 1.5em;
+  }
+
+  .contact-button {
+    display: none;
+  }
+
+  .hamburger-box {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    display: inline-block;
+    position: absolute;
+    right: 5%;
+    margin-top: 7px;
+  }
+
+  .fa-bars {
+    color: #f2f2f2;
+    width: 97%;
+  }
+
+  .theme {
+    background-color: #f2f2f2;
+  }
+
+  .theme-inner {
+    height: 640px;
+    background-color: #f2f2f2;
+    width: 97%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  .main-theme {
+    color: #74cfae;
+    font-size: 90px;
+    font-weight: 700;
+    padding-top: 160px;
+  }
+
+  /* .break:before {
+    content: "\A";
+    white-space: pre;
+  } */
+  
+  .main-theme-p {
+    font-size: 30px;
+    color: #c0c0c0;
+    padding: 20px 0 130px 0;
+  }
+  
+  .section-container {
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  .section-inner {
+    background-color: #74cfae;
+    padding-top: 50px;
+  }
+
+  .section-image-container {
+    margin-bottom: 10px;
+  }
+  
+  .section-image {
+    width: 160px;
+    height: 300px;
+  }
+  
+  .section-inner__title {
+    font-size: 24px;
+    color: #fff;
+    font-family: Raleway;
+  }
+  
+  .section-inner__text {
+    font-size: 20px;
+    color: #fff;
+    margin-top: 35px;
+    line-height: 22px;
+  }
+
+  .article-container {
+    margin: 0 auto;
+    background-color: #fff;
+    padding-top: 60px;
+  }
+  
+  .article-title {
+    font-family: Raleway;
+    text-align: center;
+    font-size: 24px;
+    color: #333;
+    margin-top: 60px;
+    margin-bottom: 40px;
+  }
+  
+  .article-images {
+    width: 97%;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+  
+  .article-image-container {
+    box-sizing: border-box;
+    text-align: center;
+  }
+
+  .article-image-container:nth-child(4) {
+    margin-top: 80px;
+  }
+
+  .article-image {
+    opacity: 0.7;
+    width: 97%;
+  }
+  
+  .article-image:hover {
+    transition: all 0.3s;
+    opacity: 1;
+  }
+  
+  .article-image-container:nth-child(3n) {
+    margin-right: 0;
+  }
+  
+  .article-container-bottom {
+    text-align: center;
+    padding-top: 90px;
+    padding-bottom: 70px;
+    background-color: #fff;
+  }
+
+  .article-container__text {
+    text-align: center;
+  }
+  
+  .email-me__button {
+    text-decoration: none;
+    color: #fff;
+    background-color: #74cfae;
+    font-size: 12px;
+    padding: 14px 20px;
+    display: inline-block;
+    margin-top: 70px;
+  }
+  
+  .email-me__button:hover {
+    color: #333;
+    transition: all 0.3s;
+  }
+  
+  .section-bottom {
+    background-color: #333;
+    height: 490px
+  }
+  
+  .section-bottom-title {
+    font-family: Raleway;
+    padding-top: 70px;
+    margin-bottom: 70px;
+    font-size: 24px;
+    color: #fff;
+    text-align: center;
+  }
+  
+  .section-bottom-image {
+    float: left;
+    margin-bottom: 100px;
+  }
+  
+  .section-bottom-image__text {
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .section-bottom-image {
+    margin-right: 180px;
+  }
+  
+  .section-bottom-image:first-child {
+    margin-left: 200px;
+  }
+  
+  .fa-facebook-f {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .fa-basketball-ball {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .fa-twitter {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .fa-envelope {
+    font-size: 2em;
+    color: #74cfae;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 35px;
+  }
+  
+  .btn {
+    width: 185px;
+    height: 100px;
+  }
+  
+  .btn:hover {
+    background-color:#fff;
+    transition: all 0.3s;
+  }
+  
+  .sns-wrapper {
+    height: 500px;
+    background-color: #f2f2f2;
+    text-align: center;
+  }
+  
+  .sns-content {
+    padding: 200px 0;
+  }
+  
+  .footer-inner {
+    background-color: #74cfae;
+    height: 65px;
+    position: relative;
+  }
+  
+  .footer__text {
+    color: #fff;
+    position: absolute;
+    top: 20px;
+    right: 200px;
+    font-size: 15px;
+  }
+}
+
+.inner {
+  margin: 0 auto;
+}
+/* .wrapper {
+  width: 97%;
   margin: 0 auto;
 }
 
 .header {
-  width: 1100px;
+  width: 97%;
 }
 
 .header-inner {
@@ -19,7 +880,7 @@
 
 .fa-bolt {
   position: absolute;
-  left: 200px;
+  left: 20%;
   padding: 15px 0;
   font-size: 1.5em;
 }
@@ -122,7 +983,9 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin-left: 150px;
+  width: 1100px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .article-image-container {
@@ -132,8 +995,6 @@
   
 }
 .article-image {
-  width: 200px;
-  height: 200px;
   opacity: 0.7;
 }
 
@@ -277,3 +1138,5 @@
   font-size: 15px;
 }
 
+
+ */
