--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ img {
 }
 
 main {
-  padding-top: 77px;
+  padding-top: 70px;
 }
 
 .inner {
@@ -116,6 +116,10 @@ main {
   margin-top: 35px;
 }
 
+.article-container {
+  background-color: #f2f2f2;
+}
+
 .article-container-inner {
   padding: 60px 0 70px 0;
 }
@@ -137,7 +141,6 @@ main {
 .article-image-container {
   box-sizing: border-box;
   margin: 80px 0 0 100px;
-  width: calc(33.3333333% - 200px / 3);
 }
 .article-image {
   opacity: 0.7;
